Upgrading snippets for compatibility with new factory girl 2.0 sintaxe.

--- a/info.plist
+++ b/info.plist
@@ -17,6 +17,8 @@
 		<string>8750F29F-D945-4349-96A4-5CF0BF217D38</string>
 		<string>A13D3CED-841F-4562-B8FE-BD093A5A6ADE</string>
 		<string>71757FAE-3E48-4347-A1FD-D3FBBF3F717B</string>
+		<string>AEEF2150-CC6E-43A8-8329-C39E256DE6D6</string>
+		<string>A20B9254-7765-416B-A407-051F720BD34D</string>
 	</array>
 	<key>uuid</key>
 	<string>148A33A3-35F6-45D9-8ADE-08848291AF64</string>
